--- a/common_mapper/pom.xml
+++ b/common_mapper/pom.xml
@@ -12,4 +12,41 @@
         <groupId>tech.hicode.shop1</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+<dependencies>
+    <dependency>
+        <groupId>tech.hicode.shop1</groupId>
+        <artifactId>common_pojo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <!--mybatis-->
+    <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis</artifactId>
+        <version>${mybatis-version}</version>
+    </dependency>
+    <!--mysql driver-->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>${mysql-connector-java-version}</version>
+    </dependency>
+    <!--alibaba database connection pool-->
+    <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>druid</artifactId>
+        <version>${druid-version}</version>
+    </dependency>
+    <!--page helper-->
+    <dependency>
+        <groupId>com.github.pagehelper</groupId>
+        <artifactId>pagehelper-spring-boot-starter</artifactId>
+        <version>${pagehelper-version}</version>
+    </dependency>
+    <!--mybatis and spring integration starter-->
+    <dependency>
+        <groupId>org.mybatis.spring.boot</groupId>
+        <artifactId>mybatis-spring-boot-starter</artifactId>
+        <version>${spring-mybatis-version}</version>
+    </dependency>
+</dependencies>
 </project>
