--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,6 @@
         <module>common_mapper</module>
         <module>common_pojo</module>
         <module>common_eureka</module>
+        <module>common_utils</module>
     </modules>
 </project>
