--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,6 @@
         <module>common_pojo</module>
         <module>common_eureka</module>
         <module>common_utils</module>
+        <module>common_item</module>
     </modules>
 </project>
